syntax = "proto3"; // 指定protobuf版本
option java_package = "com.takiku.im_lib.protobuf";
option java_outer_classname = "PackProtobuf";


message Pack {
    enum PackType {
        MSG = 0;
        REPLY = 1;
        HEART = 2;
        SHAKEHANDS = 3;
        ACK = 4;

    }
    PackType packType = 1;
    oneof body {
        Msg msg = 2;
        Reply reply = 3;
        Heart heart = 4;
        ShakeHands shakeHands = 5;
        Ack ack = 6;
    }
    int32 version = 7; //协议版本号
}

message ShakeHands { //握手认证
                     string msgId = 1;
                     string userId = 2;
                     string token = 3;
}
message Msg {
    int64 serial=1;
    Head head = 2;
    string body = 3;
}
message Head {
    string msgId = 1; // 消息id
    int32 msgType = 2; // 消息类型
    int32 msgContentType = 3; // 消息内容类型
    string fromId = 4; // 消息发送者id
    string toId = 5; // 消息接收者id
    int64 timestamp = 6; // 消息时间戳
    string extend = 7; // 扩展字段，以key/value形式存放的json
    string auth = 8;
}
message Reply { //消息回执
    int64 serial= 1;
    int32 replyType=2;//回复类型
    string msgId=3;
    string userId=4;//服务端发送用的时候为发送者Id,客户端发送的时候则为接收Id
    int32 statusReport=5;//状态
}
message Heart { //心跳
    string msgId = 1;
}
message Ack {
    int64 serial= 1;
    string ackMsgId = 2;
    int32 ackType = 3;
    int32 result = 4;
}
